# TrimSimulator

./: .gitignore  CMakeLists.txt  README.md  notes.txt
Results/: ECS251.pptx  gen6_2.xlsx
SSDEventGenerator-1.0.0/: activity.csv  bash_utils.py  preprocessor.py  ssd_event_generator.py  statistic.csv  timeout_alarm.py  trim_simulator_utils.py
TrimSimulator-1.0.0/include/: command.h  ecs251_trim_simulator.h  hold_trim_simulator.h  io_command.h  io_trim_simulator.h  macro.h  queued_trim_simulator.h  semi_queued_trim_simulator.h  sequential_trim_simulator.h  simulator.h  trim_command.h
TrimSimulator-1.0.0/src/: command.cpp  ecs251_trim_simulator.cpp  hold_trim_simulator.cpp  io_command.cpp  io_trim_simulator.cpp  io_utils.cpp  main.cpp  queued_trim_simulator.cpp  semi_queued_trim_simulator.cpp  sequential_trim_simulator.cpp  sequential_trim_simulator_bk.cpp  simulator.cpp  trim_command.cpp
include/: base_trim.h  command.h  io_command.h  io_utils.h  macro.h  new_trim.h  queued_trim.h  queued_trim_simulator.h  sequential_trim.h  sequential_trim_simulator.h  simulator.h  trim_command.h
src/: base_trim.cpp  command.cpp  io_command.cpp  io_utils.cpp  main.cpp  new_trim.cpp  preprocessor.py  queued_trim.cpp  queued_trim_simulator.cpp  sequential_trim.cpp  sequential_trim_simulator.cpp  simulator.cpp  trim_command.cpp
test_case/: activity.csv  activity_gen1.csv  activity_real3.csv  statistic.csv  statistic_real1.csv  test1.txt  test2.txt
test_case/new/: new_activity_real1.csv  new_statistic_real1.csv
test_case/old/: activity_real1.csv  activity_real2.csv  (+3 more)
